assets/src/less/core.less
@import 'bootstrap-imports.less';

body { background:#effffe; }
header { background:#4fcdc4; padding:18px 0 12px; margin:0 0 30px; border-bottom:1px solid darken(#4fcdc4, 10%); 
  a { color:#fff;  
    &:hover { color:#fff; text-decoration:none; }
  }

  ul { .list-inline; float:right; margin:0; text-transform:uppercase; font-size:12px; margin-top:8px; 
    li { margin-left:30px; 
      a { border-bottom:2px solid rgba(0, 0, 0, 0); padding-bottom:6px; display:inline-block;
        &:hover { border-color:#fff; }
      }

      &.current {
        a { border-color:#fff; }
      }
    }
  }
}

.logo { font-family:'Nunito', 'sans-serif'; font-size:21px; font-weight:300; }
.btn-lg { border-radius:3px; }

.products--list {
  .product--item { background:#fff; border:1px solid #ddd; overflow:hidden; border-radius:3px; margin-bottom:30px;

    figure {
      img { max-width:100%; margin:0 auto; }
    }
    figcaption { padding:18px 12px 12px; 
      .product--item__title { font-family:'Open Sans', 'sans-serif'; margin-bottom:3px; display:inline-block; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; width:100%; }
      .product--item__price { font-family:'Open Sans', 'sans-serif'; display:block; color:@brand-primary; }
    }
  }

  @media (min-width: @screen-sm-min) { 
    .product--item { float:left; margin-bottom:2%; margin-right:2%; width:32%; 
      &:nth-child(7n-6),
      &:nth-child(7n-5),
      &:nth-child(7n-4) { width:32%; }
      &:nth-child(7n-4) { margin-right:0; }

      &:nth-child(7n-3),
      &:nth-child(7n-2),
      &:nth-child(7n-1),
      &:nth-child(7n) { width:23.5%; }
      &:nth-child(7n) { margin-right:0; }
    }
  }
}

.product--details {
  .product--item { 
    figure { background:#fff; border-radius:3px; border:1px solid #ddd; overflow:hidden; }
  }
  figure { margin-bottom:30px; }
  figcaption { background:#fff; border:1px solid #ddd; border-radius:3px; padding:24px 18px; margin-bottom:30px;
    .product--item__title { font-family:'Open Sans', 'sans-serif'; font-size:18px; margin:0; text-align:center; }
    .product--item__price { font-family:'Open Sans', 'sans-serif'; margin:18px; font-size:24px; text-align:center; position:relative; 
      &:before,
      &:after { content:''; display:block; width:100px; border-bottom:1px solid #eee; top:18px; position:absolute; top:18px; }
      &:after { left:-18px; }
      &:before { right:-18px; }
    }
    
    .product--item__discount { margin-top:18px;
      td, th { text-align:center; }
      td { font-size:18px; font-family:'Open Sans', 'sans-serif'; }
      .product--item__discount__before { text-decoration:line-through; color:#aaa; }
      .product--item__discount__percentage { color:@brand-danger; } 
      .product--item__discount__after { color:@brand-success; } 
    }

    .product--item__description { font-size:13px; margin-top:12px; line-height:1.6; color:#888; }
    .product--item__details { .list-unstyled; margin:24px 18px 18px; font-size:13px;
      li { .clearfix; padding:6px 0;
        span { .pull-left; color:#888; }
        b { .pull-right; }
        + li { border-top:1px solid #eee; }
      }
    }
    
    .product--item__btn { color:@brand-pink; padding:12px; margin-top:30px; border:1px solid @brand-pink; border-radius:3px; background:#fff;
      .flaticon-tag1 { position:relative; top:1px; left:-12px;
        &:before { font-size:24px; line-height:0; }
      }
      &:hover { border-color:darken(@brand-pink, 20%); color:darken(@brand-pink, 20%); }
    }
  }
  .img-thumbnail { border-radius:3px; }
}

.blog--post { background:#fff; padding:30px; margin-bottom:30px; border:1px solid #eee; border-radius:3px;
  .blog--post--header { margin-bottom:30px;
    h1 { margin:0; font-size:30px; }
  }
}

.blog--posts { background:#fff; padding:30px; margin-bottom:30px; border:1px solid #eee; border-radius:3px; 
  &:extend(.list-inline);

  li { margin:21px 0; }
  .blog--posts--title { font-size:21px; }
}


.disqus { background:#fff; padding:12px 12px 0; border:1px solid #ddd; border-radius:3px; }

.bank-accounts { margin-top:30px; 
  h3 { margin:0 0 6px; font-size:18px; }
  ul { .list-unstyled; margin-bottom:24px; }
  li { padding:6px 0;
    b { .pull-right; }
    + li { border-top:1px solid #eee; }
  }
}

.promo { margin-bottom:30px; }

